adding css style to index page and about

--- a/about.html
+++ b/about.html
@@ -5,21 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Snack-Bank</h1>
-        <button>Home</button>
-        <button>Menu</button>
-        <button>Contact Us</button> <br>
         <img src="logo.png" alt="Snack-Bank">
+        
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Menu</a></li>
+            <li><a href="">Contact Us</a><br></li>
+        </ul>
+
     </header>
-    <main><p>Snack-Bank is a restautan located in Jordan Amman specifically on the 8th circle , we offer a variety of fast food dishes</p></main>
+    <main class="about-main"><p>Welcome to Snack Bank, a fast-food restaurant located in the heart of Amman, Jordan. <br> Snack Bank offers a delicious and diverse menu of fast food, perfect for those on <br> the go or looking for a quick bite to eat. <br>
+
+        At Snack Bank, we pride ourselves on using only the freshest and <br> highest quality ingredients <br> to ensure our customers receive the best possible dining experience. <br> Whether you're in the mood for a classic burger and fries with a cold drink, <br> we have something to satisfy every taste and craving.</p></main>
     <footer>
-        <p>
-    Location : Amman 8th circle <br>
-    Contact us : snackbankjo@gmail.com<br>+962797430323 <br> copyrights@snackbankjo
-        </p>
+        <ul>
+            <li>Location : Amman 8th circle</li>
+            <li>Contact us : snackbankjo@gmail.com</li>
+            <li>Phone: +962797430323</li>
+            <li>copyrights@snackbankjo</li>
+        </ul>
+    
     </footer>
 </body>
 </html>
