--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img id="logo" src="logo.png" alt="Snack-Bank">
         
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="">Home</a></li>
             <li><a href="">Menu</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="">Contact Us</a><br></li>
