--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <img src="logo.png" alt="Snack-Bank">
         
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="">Home</a></li>
             <li><a href="">Menu</a></li>
             <li><a href="">Contact Us</a><br></li>
         </ul>
